--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ header {
 
 #headermenulist li {
     border-radius: 4px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
 }
 
 #headermenulist li a {
@@ -36,6 +39,10 @@ header {
 
 #sitelogo {
     margin: 0 0 0 4em;
+    padding: 0.2em 0.2em;
+    border-style: solid;
+    border-width: 4px;
+    border-color: #0c1d49ff;
     color: #0c1d49ff;
 }
 
