--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,14 @@ header {
     font-weight: bold;
 }
 
-#headermenulist {
+.tabs {
     margin: 0 5em 0 5em;
     padding: 0 0 0 0;
     display: flex;
     list-style: none;
 }
 
-#headermenulist li {
+.tab_item {
     border-radius: 4px;
     margin: 0 2em 0 2em;
     padding: 0.1em 0.1em;
@@ -32,13 +32,23 @@ header {
     cursor : pointer;
 }
 
-#headermenulist li:hover {
+.tab_item:hover {
     background-color: #f3e2b6ff;
 }
 
-#headermenulist .active {
+.tabs .active {
     text-decoration: underline;
     text-underline-offset: 0.5em;
+}
+
+.tab_content {
+    display: none;
+    clear: both;
+    overflow: hidden;
+}
+
+.is-show {
+  display: block;
 }
 
 #sitelogo {
