--- a/css/style.css
+++ b/css/style.css
@@ -105,23 +105,19 @@ header {
     height: 34em;
 }
 
-.post-left-block {
-    width: 20em;
-}
-
 #post-btn {
     margin: 6.5em 4em 0 0;
     padding: 0 0 0 0.5em;
-    width: 5.3em;
     position:fixed;
     right:0%;
     vertical-align: middle;
+    width: 5.3em;
     border-radius: 4px;
-    cursor : pointer;
     font-size: 1.2em;
-    color: #666666;
     font-weight: bold;
+    color: #666666;
     box-shadow: 0.1em 0.1em 0.1em #666666;
+    cursor : pointer;
 }
 
 #post-image {
@@ -129,7 +125,7 @@ header {
     height: 0.8em;
 }
 
-#post:hover {
+#post-btn:hover {
     background-color: #f3e2b6ff;
 }
 
