--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ header {
     align-items:center;
   }
 
-  .card-good-icon {
+  .fa-thumbs-up {
     height: 1.2em;
     margin-right: 0.3em;
   }
