--- a/css/style.css
+++ b/css/style.css
@@ -224,8 +224,19 @@ header {
   }
 
   .fa-thumbs-up {
-    height: 1.2em;
+    font-size: 1.2em;
     margin-right: 0.3em;
+  }
+
+  .fa-thumbs-up:hover {
+    font-size: 1.3em;
+    color: #0c1d49ff;
+ }
+
+  .good-active {
+    font-size: 1.3em;
+    font-weight: bold;
+    color: #0c1d49ff;
   }
 
   .modal {
