--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@ header {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.8);
-    z-index: 99999;
+    z-index: 99998;
     animation-name: show;
     animation-duration: 0.5s;
   }
@@ -330,10 +330,10 @@ header {
 
   .rate-form label {
     position: relative;
-    padding: 0 5px;
+    padding: 0 0.2em;
     color: #ccc;
     cursor: pointer;
-    font-size: 35px;
+    font-size: 2.5em;
   }
 
   .rate-form label:hover {
@@ -371,7 +371,7 @@ header {
   
 .input {
   display: inline-block;
-  width: 80em;
+  width: 100%;
   max-width: 100%;
   padding: 0.5em;
   border: 1px solid #666666;
@@ -380,3 +380,89 @@ header {
   margin: 0.5em 0;
 }
 
+
+.confirm-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 99999;
+  animation-name: show;
+  animation-duration: 0.5s;
+  justify-content: space-around;
+}
+
+.confirm-modal-content {
+  margin: 15% auto;
+  padding: 0 3%;
+  width: 35%;
+  height: 40%;
+  background-color: white;
+  border: 1px solid #666666;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  overflow: scroll;
+  border-radius: 0.5em;
+
+}
+
+.confirm-modal-header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 4%;
+  opacity: 0.9;
+  color: #0c1d49ff;
+  background-color: white;
+  font-weight: bold;
+  color: #0c1d49ff;
+  font-size: 1.5em;
+  border-bottom: solid 1px #666666;
+}
+
+.confirm-modal-body {
+  margin-top: 8%;
+  margin-bottom: 8%;
+  padding-top: 3%;
+  font-size: 1.2em;
+  height: 35%;
+  align-items: center;
+  color: #666666;
+}
+
+.confirm-modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  border-top: solid 1px #666666;
+  padding-top: 2%;
+}
+
+.confirm-cancel {
+  margin-left: 7%;
+  width: 7em;
+  height: 2em;
+  font-size: 1em;
+  color: #666666;
+  text-align: center;
+  background-color: #FFFFFF;
+  border-radius: 4px;
+  box-shadow: 0.1em 0.1em 0.1em #666666;
+  font-weight: bold;
+  cursor : pointer;
+}
+
+#confirm-btn {
+  margin-left: 7%;
+  width: 7em;
+  height: 2em;
+  font-size: 1em;
+  color: #ffffff;
+  text-align: center;
+  background-color: #0c1d49ff;
+  border-radius: 4px;
+  box-shadow: 0.1em 0.1em 0.1em #666666;
+  font-weight: bold;
+  cursor : pointer;
+}
