--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ header {
   }
 
   .form-input {
-    margin-bottom: 2em;
+    margin-bottom: 1.6em;
   }
 
   .form-input p {
@@ -347,7 +347,7 @@ header {
   .modal-footer {
     width: 100%;
     border-top: solid 1px #666666;
-    margin-top: 1em;
+    /* margin-top: 1em; */
     display: flex;
     justify-content: flex-end;
   }
