--- a/css/style.css
+++ b/css/style.css
@@ -268,11 +268,13 @@ header {
     padding: 0 3%;
     width: 85%;
     height: 85%;
-    background-color: #fdf5e6;
+    background-color: #ffffff;
     border: 1px solid #666666;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     overflow: scroll;
     border-radius: 1em;
+    font-weight: bold;
+    color: #666666;
   }
   
   .modal-header {
@@ -282,7 +284,6 @@ header {
     justify-content: space-between;
     opacity: 0.9;
     color: #0c1d49ff;
-    background-color: #fdf5e6;
     border-bottom: solid 1px #666666;
   }
 
@@ -306,12 +307,25 @@ header {
     margin-bottom: 1.6em;
   }
 
+  #book-information {
+    border: solid 1px #000000;
+    border-radius: 0.5em;
+    background-color: #f5f5f5;
+    margin-bottom: 2em;
+    padding: 1em 1em;
+    box-shadow: 0.1em 0.1em 0.1em #c0c0c0;
+  }
+
   .form-input p {
     margin: 0 0;
   }
 
   #star0 {
     display: none;
+  }
+
+  .rate-form label {
+    text-shadow: 0.05em 0.05em 0.1em #c0c0c0;
   }
 
   .rate-form {
@@ -343,11 +357,16 @@ header {
   .rate-form input[type=radio]:checked ~ label {
     color: #ffcc00;
   }
+
+  #book-comment {
+    box-shadow: 0.1em 0.1em 0.1em #c0c0c0;
+    border-radius: 0.5em;
+    border: 1px solid #666666;
+  }
   
   .modal-footer {
     width: 100%;
     border-top: solid 1px #666666;
-    /* margin-top: 1em; */
     display: flex;
     justify-content: flex-end;
   }
