--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,9 @@
 } */
 
 body {
-    margin: 0 0 0 0;
+    margin: 0 0;
     background-color: #fdf5e6;
+    box-sizing: border-box;
 }
 
 header {
@@ -23,13 +24,16 @@ header {
     font-size: 1.2em;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-weight: bold;
+    padding-left: 64px;
+    padding-right: 64px;
 }
 
 .tabs {
-    margin: 0 5em 0 5em;
-    padding: 0 0 0 0;
+    padding: 0 0;
     display: flex;
+    justify-content: space-between;
     list-style: none;
 }
 
@@ -41,7 +45,6 @@ header {
 .tab-item {
     border-radius: 4px;
     margin: 0 2em 0 2em;
-    padding: 0.1em 0.1em;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -55,7 +58,6 @@ header {
 }
 
 #site-logo {
-    margin: 0 0 0 4em;
     padding: 0.2em 0.2em;
     border-style: solid;
     border-width: 4px;
@@ -64,19 +66,18 @@ header {
 }
 
 #login {
-    margin: 0 4em 0 0;
     color: #ffffff;
     text-align: center;
     background-color: #0c1d49ff;
     border-radius: 4px;
-    box-shadow: 0.1em 0.1em 0.1em #666666;
+    box-shadow: 2px 2px 2px #666666;
     font-weight: bold;
     font-size: 1em;
     cursor : pointer;
 }
 
 .header-space {
-    display: none;
+  display: none;
 }
 
 .active-space {
@@ -119,7 +120,8 @@ header {
 }
 
 #form-modal-btn {
-    margin: 2.5em 4em 0 0;
+    margin-top: 2.5em;
+    margin-right: 64px;
     padding: 0 0 0 0.5em;
     position:fixed;
     right:0%;
@@ -129,7 +131,7 @@ header {
     font-size: 1.2em;
     font-weight: bold;
     color: #666666;
-    box-shadow: 0.1em 0.1em 0.1em #666666;
+    box-shadow: 2px 2px 2px #666666;
     cursor : pointer;
 }
 
@@ -142,28 +144,37 @@ header {
     background-color: #f3e2b6ff;
 }
 
+#tweet-area {
+  padding-left: 64px;
+  padding-right: 64px;
+}
+
 #all-tweet {
-    margin: 0 3em 0 3em;
-    justify-content: center;
-    flex-direction: row;
     flex-wrap: wrap;
-    align-items: space-between;
     display: flex;
+    list-style-type: circle;
+    margin: 0;
+    padding: 0;
 }
 
 .card {
-    width: 20%;
-    height: 15em;
-    margin: 0em 1em 1em 1em;
-    padding: 1em 1em;
+    width: calc((99.9999% / 4) - 90px / 4);
+    margin: 20px 0 10px 30px;
     background-color: white;
     color: #666666;
-    border-radius: 1em;
-    box-shadow: 0.05em 0.05em grey;
+    border-radius: 12px;
+    box-shadow: 2px 2px 6px gray;
+    list-style-type: none;
+  }
+
+  .card:nth-child(4n + 1) {
+    margin-left: 0;
   }
 
   .card-user {
     display: flex;
+    margin-left: 10px;
+    margin-top: 10px;
   }
 
   .card-user-icon {
@@ -178,8 +189,6 @@ header {
   }
 
   .card-book {
-    margin-top: 0.3em;
-    height: 75%;
     border-bottom: solid;
     border-color: #666666;
   }
@@ -188,6 +197,7 @@ header {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    margin-left: 10px;
   }
 
   .card-book-image-block {
@@ -195,27 +205,28 @@ header {
   }
 
   .card-book-image {
-    height: 8em;
-    margin-top: 1em;
+    height: 10em;
+    margin-top: 5px;
   }
 
   .card-book-evaluation {
     display: flex;
     align-items:center;
-    position: relative;
-    top: -12%;
-    left: 86%;
+    padding-bottom: 5px;
+    padding-right: 10px;
+    display: flex;
+    justify-content: flex-end;
   }
 
   .card-book-evaluation-icon {
     height: 1.2em;
-    margin-right: 0.3em;
+    margin-right: 5px;
   }
 
   .card-under {
     display: flex;
     justify-content: space-between;
-    margin-top: 0.5em;
+    padding: 10px 10px;
   }
 
   .card-good {
@@ -225,7 +236,7 @@ header {
 
   .fa-thumbs-up {
     font-size: 1.2em;
-    margin-right: 0.3em;
+    margin-right: 5px;
   }
 
   .fa-thumbs-up:hover {
@@ -380,7 +391,7 @@ header {
     font-weight: bold;
     color: #ffffff;
     box-shadow: 0.1em 0.1em 0.1em #666666;
-    cursor : pointer;
+    cursor: pointer;
     background-color: #0c1d49ff;
 }
   
